--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -11,40 +11,57 @@
 
 <form class="form-signin">
     <div class="text-center mb-4">
-<!--        <img class="mb-4" src="/docs/4.6/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">-->
+        <!--        <img class="mb-4" src="/docs/4.6/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">-->
         <div class="mb-4 w-100 loginLogo">
             <div style="width: 72px;height: 72px">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M512 240c0 114.9-114.6 208-256 208c-37.1 0-72.3-6.4-104.1-17.9c-11.9 8.7-31.3 20.6-54.3 30.6C73.6 471.1 44.7 480 16 480c-6.5 0-12.3-3.9-14.8-9.9c-2.5-6-1.1-12.8 3.4-17.4l0 0 0 0 0 0 0 0 .3-.3c.3-.3 .7-.7 1.3-1.4c1.1-1.2 2.8-3.1 4.9-5.7c4.1-5 9.6-12.4 15.2-21.6c10-16.6 19.5-38.4 21.4-62.9C17.7 326.8 0 285.1 0 240C0 125.1 114.6 32 256 32s256 93.1 256 208z"/></svg>
             </div>
         </div>
-        <h1 class="h3 mb-3 font-weight-normal">채팅 프로그램</h1>
+        <h1 class="h3 mb-3 font-weight-normal">회원가입</h1>
 
     </div>
 
     <div class="form-label-group">
-        <input type="text" id="inputId" class="form-control" placeholder="ID를 입력해주세요" required="" autofocus="">
+        <div class="row">
+            <div class="col-8">
+                <input type="text" id="inputId" class="form-control" placeholder="ID를 입력해주세요" required="" autofocus="" minlength="8" maxlength="20">
+            </div>
+            <div class="col-4">
+                <button type="button" class="btn btn-secondary float-right" id="userIdCheck">중복확인</button>
+            </div>
+        </div>
         <label for="inputId"></label>
     </div>
 
     <div class="form-label-group">
-        <input type="password" id="inputPassword" class="form-control" placeholder="PW를 입력해주세요" required="">
+        <input type="text" id="inputNickname" class="form-control" placeholder="닉네임을 입력해주세요" required="" autofocus="" minlength="3" maxlength="20">
+        <label for="inputNickname"></label>
+    </div>
+
+    <div class="form-label-group">
+        <input type="password" id="inputPassword" class="form-control" placeholder="PW를 입력해주세요" required="" minlength="8" maxlength="20">
         <label for="inputPassword"></label>
     </div>
 
-    <div class="checkbox loginSettings mb-3">
-        <label>
-            <input type="checkbox" value="remember-me"> Remember me
-        </label>
-        <label>
-            <button type="button" class="btn btn-secondary" id="joinMember">회원가입</button>
-        </label>
+    <div class="form-label-group">
+        <input type="password" id="inputPasswordTest" class="form-control" placeholder="PW를 다시입력해주세요" required="" minlength="8" maxlength="20">
+        <label for="inputPassword"></label>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="button" id="login">로그인</button>
+
+<!--    <div class="checkbox loginSettings mb-3">-->
+<!--        <label>-->
+<!--            <input type="checkbox" value="remember-me"> Remember me-->
+<!--        </label>-->
+<!--        <label>-->
+<!--            <button type="button" class="btn btn-secondary" value="joinMember">회원가입</button>-->
+<!--        </label>-->
+<!--    </div>-->
+    <button class="btn btn-lg btn-primary btn-block" type="button" id="register">회원가입</button>
     <p class="mt-5 mb-3 text-muted text-center">© 2023-2023</p>
 </form>
 
 </body>
-<script src="/js/login/login.js"></script>
+<script src="/js/login/register.js"></script>
 <style>
     .form-signin {
         width: 100%;
@@ -61,6 +78,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+    .float-right {
+        float: right;
     }
 </style>
 </html>
