--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -28,6 +30,7 @@
             </div>
             <div class="col-4">
                 <button type="button" class="btn btn-secondary float-right" id="userIdCheck">중복확인</button>
+                <input type="hidden" id="userIdStatus" value="0">
             </div>
         </div>
         <label for="inputId"></label>
@@ -45,17 +48,8 @@
 
     <div class="form-label-group">
         <input type="password" id="inputPasswordTest" class="form-control" placeholder="PW를 다시입력해주세요" required="" minlength="8" maxlength="20">
-        <label for="inputPassword"></label>
+        <label for="inputPasswordTest"></label>
     </div>
-
-<!--    <div class="checkbox loginSettings mb-3">-->
-<!--        <label>-->
-<!--            <input type="checkbox" value="remember-me"> Remember me-->
-<!--        </label>-->
-<!--        <label>-->
-<!--            <button type="button" class="btn btn-secondary" value="joinMember">회원가입</button>-->
-<!--        </label>-->
-<!--    </div>-->
     <button class="btn btn-lg btn-primary btn-block" type="button" id="register">회원가입</button>
     <p class="mt-5 mb-3 text-muted text-center">© 2023-2023</p>
 </form>
