feat : 1. 로그인 기능 추가

--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -55,6 +55,7 @@
 </form>
 
 </body>
+<script src="/js/common/common.js"></script>
 <script src="/js/login/register.js"></script>
 <style>
     .form-signin {
