--- a/src/main/resources/templates/chat/mainChat.html
+++ b/src/main/resources/templates/chat/mainChat.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html lang="en"xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<th:block layout:replace="common/header"></th:block>
 <body>
-    <p>채팅프로그램 메인페이지~~~</p>
+
+<th:block layout:replace="common/toolbar"></th:block>
+
+<div class="container-fluid">
+    <div class="row">
+
+        <th:block layout:replace="common/sidebar"></th:block>
+
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2">채팅방</h1>
+                <div class="btn-toolbar mb-2 mb-md-0">
+                    <div class="btn-group mr-2">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+                    </div>
+                    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
+                        This week
+                    </button>
+                </div>
+            </div>
+            <div> <!-- 채팅 게시판 -->
+                <div class="row">
+                    <div class="col-6">
+
+                    </div>
+                    <div class="col-2 d-flex align-items-center flex-end">
+                        <span class="bold" style="font-size: 20px">검색</span>
+                    </div>
+                    <div class="col-4">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-striped table-sm" id="chat-table">
+                        <thead>
+                        <tr>
+                            <th class="text-center">번호</th>
+                            <th class="text-center">제목</th>
+                            <th class="text-center">방장</th>
+                            <th class="text-center">참가자</th>
+                            <th class="text-center">등록날짜</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td class="text-center">테스트</td>
+                            <td class="text-center">ADMIN</td>
+                            <td class="text-center">2</td>
+                            <td class="text-center">2023-05-22</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </main>
+    </div>
+</div>
 </body>
+<script src="/js/chat/chat.js"></script>
+<script src="/js/common/common.js"></script>
+
 </html>
