feat : 1. 채팅방 리스트 조회 및 검색기능 2. 서버사이드로 작동

--- a/src/main/resources/static/css/common/chat.css
+++ b/src/main/resources/static/css/common/chat.css
@@ -116,3 +116,9 @@ body {
 .space-around {
     justify-content: space-around !important;
 }
+.vertical-align-middle {
+    vertical-align: middle !important;
+}
+.pl-30 {
+    padding-left: 30px;
+}
