--- a/src/main/resources/templates/chat/mainChat.html
+++ b/src/main/resources/templates/chat/mainChat.html
@@ -27,14 +27,26 @@
             </div>
             <div> <!-- 채팅 게시판 -->
                 <div class="row">
-                    <div class="col-6">
-
+                    <div class="col-4 d-flex align-items-center  pl-30">
+                        <div class="flex-start">
+                            <span class="bold" style="font-size: 20px" id="chatRoomTotal"></span>
+                            <span class="bold" style="font-size: 20px">건</span>
+                        </div>
                     </div>
-                    <div class="col-2 d-flex align-items-center flex-end">
-                        <span class="bold" style="font-size: 20px">검색</span>
-                    </div>
-                    <div class="col-4">
-                        <input type="text" class="form-control">
+                    <div class="col-8 d-flex align-items-center flex-end">
+                        <div class="col-4">
+                            <select class="form-control" id="searchType">
+                                <option value="">전체</option>
+                                <option value="1">제목</option>
+                                <option value="2">방장</option>
+                            </select>
+                        </div>
+                        <div class="col-2">
+                            <span class="bold" style="font-size: 20px">검색</span>
+                        </div>
+                        <div class="col-6">
+                            <input type="text" class="form-control" id="searchText" placeholder="검색어 입력 후 엔터를 눌러주세요.">
+                        </div>
                     </div>
                 </div>
                 <div class="table-responsive">
@@ -46,16 +58,10 @@
                             <th class="text-center">방장</th>
                             <th class="text-center">참가자</th>
                             <th class="text-center">등록날짜</th>
+                            <th class="text-center">참가</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <td class="text-center">1</td>
-                            <td class="text-center">테스트</td>
-                            <td class="text-center">ADMIN</td>
-                            <td class="text-center">2</td>
-                            <td class="text-center">2023-05-22</td>
-                        </tr>
                         </tbody>
                     </table>
                 </div>
