feat : 1. 채팅방 등록 페이지 추가 fix : 1. 로그인 로직 오류 수정

--- a/src/main/resources/static/css/common/chat.css
+++ b/src/main/resources/static/css/common/chat.css
@@ -122,3 +122,11 @@ body {
 .pl-30 {
     padding-left: 30px;
 }
+.direction-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.pr-1rem {
+    padding-right: 1rem !important;
+}
