--- a/src/main/resources/static/css/common/chat.css
+++ b/src/main/resources/static/css/common/chat.css
@@ -130,3 +130,9 @@ body {
 .pr-1rem {
     padding-right: 1rem !important;
 }
+.justify-content-center {
+    justify-content: center;
+}
+.d-none-notImp{
+    display: none;
+}
