--- a/src/main/resources/templates/chat/chatRegister.html
+++ b/src/main/resources/templates/chat/chatRegister.html
@@ -15,57 +15,62 @@
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">채팅방 등록</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
-          <button type="button" class="btn btn-sm btn-outline-secondary ">
-            채팅방 등록하기
-          </button>
+
         </div>
       </div>
       <div> <!-- 채팅 게시판 -->
-        <div class="row">
-          <div class="col-4 d-flex align-items-center  pl-30">
-            <div class="flex-start">
-              <span class="bold" style="font-size: 20px" id="chatRoomTotal"></span>
-              <span class="bold" style="font-size: 20px">건</span>
-            </div>
-          </div>
-          <div class="col-8 d-flex align-items-center flex-end">
-            <div class="col-4">
-              <select class="form-control" id="searchType">
-                <option value="">전체</option>
-                <option value="1">제목</option>
-                <option value="2">방장</option>
-              </select>
-            </div>
-            <div class="col-2">
-              <span class="bold" style="font-size: 20px">검색</span>
-            </div>
-            <div class="col-6">
-              <input type="text" class="form-control" id="searchText" placeholder="검색어 입력 후 엔터를 눌러주세요.">
-            </div>
+        <div class="row mb-3 justify-content-center">
+          <div class="col-md-8 order-md-1">
+            <h4 class="mb-3">기본 정보</h4>
+            <form class="needs-validation" novalidate="">
+
+              <div class="mb-3">
+                <label for="chatRoomTitle">채팅방 제목 </label>
+                <input type="text" class="form-control" id="chatRoomTitle" placeholder="제목을 입력해주세요.(최대 20자)" maxlength="20">
+              </div>
+
+              <div class="mb-3">
+                <label for="chatRoomIntroduce">채팅방 소개 <span class="text-muted">(Optional)</span></label>
+                <textarea class="form-control" id="chatRoomIntroduce" placeholder="채팅방 소개문구를 입력해주세요.(최대 200자)" maxlength="200"></textarea>
+              </div>
+
+              <hr class="mb-4">
+
+              <h4 class="mb-3">공개 여부</h4>
+
+              <div class="d-block my-3">
+                <div class="custom-control custom-radio">
+                  <input id="credit" name="paymentMethod" value="1" type="radio" class="custom-control-input" checked="" required="">
+                  <label class="custom-control-label" for="credit">공개</label>
+                </div>
+                <div class="custom-control custom-radio">
+                  <input id="debit" name="paymentMethod" value="0" type="radio" class="custom-control-input" required="">
+                  <label class="custom-control-label" for="debit">비공개</label>
+                </div>
+              </div>
+              <div class="row d-none-notImp" id="chatRoomStatus">
+                <div class="col-md-6 mb-3">
+                  <label for="chatRoomPw">비밀번호</label>
+                  <input type="password" class="form-control" id="chatRoomPw" placeholder="비밀번호를 입력해주세요.(최대8자)" required="" maxlength="8">
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="chatRoomPwTest">비밀번호 확인</label>
+                  <input type="password" class="form-control" id="chatRoomPwTest" placeholder="비밀번호를 입력해주세요.(최대8자)" required="" maxlength="8">
+                </div>
+              </div>
+
+              <hr class="mb-4">
+              <button class="btn btn-primary btn-lg btn-block" type="button" id="chatRoomRegisterBtn">채팅방 등록</button>
+            </form>
           </div>
         </div>
-        <div class="table-responsive">
-          <table class="table table-striped table-sm" id="chat-table">
-            <thead>
-            <tr>
-              <th class="text-center">번호</th>
-              <th class="text-center">제목</th>
-              <th class="text-center">방장</th>
-              <th class="text-center">참가자</th>
-              <th class="text-center">등록날짜</th>
-              <th class="text-center">참가</th>
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-        </div>
+
       </div>
     </main>
   </div>
 </div>
 </body>
-<script src="/js/chat/chat.js"></script>
+<script src="/js/chat/chatRegister.js"></script>
 <script src="/js/common/common.js"></script>
 
 </html>
