feat : 1. 채팅 페이지 추가

--- a/src/main/resources/templates/chat/mainChat.html
+++ b/src/main/resources/templates/chat/mainChat.html
@@ -53,6 +53,7 @@
                             <th class="text-center">방장</th>
                             <th class="text-center">참가자</th>
                             <th class="text-center">등록날짜</th>
+                            <th class="text-center">공개여부</th>
                             <th class="text-center">참가</th>
                         </tr>
                         </thead>
